--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,47 @@
+
 body {
-    background-color: rgb(222, 162, 11);
+    background-color: #ebd9bf;
+}
+svg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: -1;
 }
 
+@keyframes rotate {
+    0% {
+   transform: rotate(0deg);
+}
+100% {
+   transform: rotate(360deg);
+}
+}
+.out-top {
+animation: rotate 50s linear infinite;
+transform-origin: 13px 25px;
+fill: #e1ca9f;
+}
+.in-top {
+animation: rotate 30s linear infinite;
+transform-origin: 13px 25px;
+fill: #b3a58b;
+border: 1rem solid white;
+
+}
+.out-bottom {
+animation: rotate 40s linear infinite;
+transform-origin: 84px 93px;
+fill: #b3a58b;
+
+}
+.in-bottom {
+animation: rotate 20s linear infinite;
+transform-origin: 84px 93px;
+fill: #e1ca9f;
+}
 
 /* FONTS & TEXT */
 
