--- a/src/App.css
+++ b/src/App.css
@@ -20,27 +20,27 @@ svg {
 }
 }
 .out-top {
-animation: rotate 50s linear infinite;
-transform-origin: 13px 25px;
-fill: #e1ca9f;
+    animation: rotate 50s linear infinite;
+    transform-origin: 13px 25px;
+    fill: #e1ca9f;
 }
 .in-top {
-animation: rotate 30s linear infinite;
-transform-origin: 13px 25px;
-fill: #b3a58b;
-border: 1rem solid white;
+    animation: rotate 30s linear infinite;
+    transform-origin: 13px 25px;
+    fill: #b3a58b;
+    border: 1rem solid white;
 
 }
 .out-bottom {
-animation: rotate 40s linear infinite;
-transform-origin: 84px 93px;
-fill: #b3a58b;
+    animation: rotate 40s linear infinite;
+    transform-origin: 84px 93px;
+    fill: #b3a58b;
 
 }
 .in-bottom {
-animation: rotate 20s linear infinite;
-transform-origin: 84px 93px;
-fill: #e1ca9f;
+    animation: rotate 20s linear infinite;
+    transform-origin: 84px 93px;
+    fill: #e1ca9f;
 }
 
 /* FONTS & TEXT */
@@ -109,6 +109,10 @@ fill: #e1ca9f;
     margin-right: 1rem;
 }
 
+.code-icon {
+    transform: scale(.25);
+}
+
 
 .icon:hover, .sub-icon:hover {
     fill: rgb(222, 162, 11);
@@ -163,7 +167,9 @@ fill: #e1ca9f;
     width: 100%;
     height: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    padding-top: 2rem;
     align-items: center;
     opacity: 0;
     background-color: rgba(244, 244, 244, 0.79);
