--- a/src/App.css
+++ b/src/App.css
@@ -127,7 +127,11 @@ svg {
 }
 
 .resume {
-    margin-right: 1rem;
+    transform: scale(3);
+    color:black;
+    margin-top: 1rem;
+    margin-left: .5rem;
+    margin-bottom: 3rem;
 }
 
 
@@ -188,5 +192,23 @@ svg {
 .thumbnail-container:hover .description {
     opacity: 1;
 
+}
+
+.prog-icon {
+    font-size: 4rem;
+    margin-right: 1rem;
+}
+
+.prog {
+    font-size: 1.5rem;
+    user-select: none;
+}
+
+
+.bubu {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: nowrap;
 }
 
