--- a/src/App.css
+++ b/src/App.css
@@ -122,17 +122,15 @@ svg {
 }
 
 
-.icon:hover, .sub-icon:hover {
+.icon:hover, .sub-icon:hover, .resume:hover {
     filter: brightness(0) invert(70%);
 }
 
 .resume {
     transform: scale(3);
     color:black;
-    margin-top: 1rem;
-    margin-left: .5rem;
-    margin-bottom: 3rem;
 }
+
 
 
 /* ACCORDION */
@@ -196,12 +194,15 @@ svg {
 
 .prog-icon {
     font-size: 4rem;
-    margin-right: 1rem;
 }
+
 
 .prog {
     font-size: 1.5rem;
     user-select: none;
+    color: rgba(231, 231, 231, 0);
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
 }
 
 
