--- a/src/index.css
+++ b/src/index.css
@@ -274,3 +274,18 @@ a {
 
 
 
+.animator {
+  animation: fade-in ease 0.5s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fade-in {
+  0% {
+      opacity: 0;
+  }
+
+  100% {
+      opacity: 1;
+  }
+}
