--- a/src/styles.css
+++ b/src/styles.css
@@ -88,7 +88,7 @@ code {
   letter-spacing: .5rem;
 }
 
-.jersey-25-charted-regular {
+.jersey {
   font-family: "Jersey 25 Charted", sans-serif;
   font-weight: 400;
   font-style: normal;
